# cbf

./: CHANGELOG.md  LICENSE  README.md  bfc.cabal  flake.nix
app/: Main.hs
examples/: factorial.c  rule110.bf  rule110.c
lib/: Basic.hs  BasicExt.hs  Executer.hs  Imp.hs  ProgWriter.hs  SafeProc.hs  UncheckedInsts.hs  UncheckedInstsExt.hs  UncheckedProc.hs
lib/Imp/: Parser.hs
tests/: Test.hs  TestFactorial.hs  TestImp.hs  TestRule110.hs  TestSafeProc.hs  TestUncheckedInsts.hs  TestUncheckedInstsExt.hs  TestUncheckedProc.hs
